css signup spacing fix

--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -82,19 +82,19 @@ h3 {
   /*styling concerning its children*/
   text-align: right;
   display: grid;
-  grid-template-rows: repeat(7, 14%);
+  grid-template-rows: repeat(6, 20%);
 }
 
 .profile-info-inputs {
   grid-column-start: 2;
   /*styling concerning its children*/
   display: grid;
-  grid-template-rows: repeat(7, 14%);
+  grid-template-rows: repeat(6, 20%);
 }
 
 input {
     width: 100%;
-    height: 50%;
+    height: 30%;
     border: none;
     margin: 0;
     display: grid;
@@ -105,7 +105,7 @@ input {
 }
 
 .submit-button {
-  grid-row-start: 2;
-  align-self: center;
-  justify-self: center;
+  grid-row-start: 3;
+  align-self: flex-end;
+  justify-self: flex-end;
 }
